--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -5,8 +5,11 @@ jobs:
     runs-on: macos-latest
     steps:
       - run: echo "Triggering gophers-sdk-go"
+      
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install OpenAPI Generator
+        run: brew install openapi-generator
       - name: Check OpenAPI Generator
         run: openapi-generator version
