--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -11,4 +11,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Get latest tag
-        run: git describe --tags
+        run: |
+          git fetch -a
+          latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+          echo $latest_tag
